force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/FACT_NMS_and_Air_Watch__c.object-meta.xml
<CustomObject>
    <label>NMS and Air Watch</label>
    <nameField>
        <displayFormat>NMSAW-{0000}</displayFormat>
        <label>NMS Air Watch</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NMS and Air Watch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>