force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_ACN_Corrected__c.field-meta.xml
<CustomField>
    <fullName>FACT_ACN_Corrected__c</fullName>
    <formula>if(LEN(FACT_Outlet_ID__c)&gt;=10,FACT_Outlet_ID__c, 
if(LEN(FACT_Outlet_ID__c)==9,&quot;0&quot;&amp;FACT_Outlet_ID__c, 
if(LEN(FACT_Outlet_ID__c)==8,&quot;00&quot;&amp;FACT_Outlet_ID__c, 
if(LEN(FACT_Outlet_ID__c)==7,&quot;000&quot;&amp;FACT_Outlet_ID__c, 
if(LEN(FACT_Outlet_ID__c)==6,&quot;0000&quot;&amp;FACT_Outlet_ID__c, 
if(LEN(FACT_Outlet_ID__c)==5,&quot;00000&quot;&amp;FACT_Outlet_ID__c, 
if(LEN(FACT_Outlet_ID__c)==4,&quot;000000&quot;&amp;FACT_Outlet_ID__c, 
if(LEN(FACT_Outlet_ID__c)==3,&quot;0000000&quot;&amp;FACT_Outlet_ID__c, 
if(LEN(FACT_Outlet_ID__c)==2,&quot;00000000&quot;&amp;FACT_Outlet_ID__c, 
if(LEN(FACT_Outlet_ID__c)==1,&quot;000000000&quot;&amp;FACT_Outlet_ID__c,&quot;&quot;))))))))))</formula>
    <label>ACN#</label>
    <type>Text</type>
</CustomField>