force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Average_Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>FACT_Average_Signal_Strength__c</fullName>
    <inlineHelpText>Avg_SS</inlineHelpText>
    <label>Average Signal Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>