force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Build_ID__c.field-meta.xml
<CustomField>
    <fullName>FACT_Build_ID__c</fullName>
    <inlineHelpText>C_BuildID</inlineHelpText>
    <label>Build ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>