force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Country__c.field-meta.xml
<CustomField>
    <fullName>FACT_Country__c</fullName>
    <inlineHelpText>C_Country</inlineHelpText>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>