force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Dispenser_Status__c.field-meta.xml
<CustomField>
    <fullName>FACT_Dispenser_Status__c</fullName>
    <inlineHelpText>Dispenser Status</inlineHelpText>
    <label>Dispenser Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>