force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Enrolled_Date__c.field-meta.xml
<CustomField>
    <fullName>FACT_Enrolled_Date__c</fullName>
    <inlineHelpText>Enrolled_Date</inlineHelpText>
    <label>Enrolled Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>