force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Last_Pour_Time__c.field-meta.xml
<CustomField>
    <fullName>FACT_Last_Pour_Time__c</fullName>
    <inlineHelpText>Last Pour: Time</inlineHelpText>
    <label>Last Pour: Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>