force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Last_Seen__c.field-meta.xml
<CustomField>
    <fullName>FACT_Last_Seen__c</fullName>
    <inlineHelpText>Last_Seen</inlineHelpText>
    <label>Last Seen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>