force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_LastVMSDate__c.field-meta.xml
<CustomField>
    <fullName>FACT_LastVMSDate__c</fullName>
    <inlineHelpText>LastVMSDate</inlineHelpText>
    <label>Last VMS Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>