force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Maximum_Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>FACT_Maximum_Signal_Strength__c</fullName>
    <inlineHelpText>Max_SS</inlineHelpText>
    <label>Maximum Signal Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>