force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Minimum_Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>FACT_Minimum_Signal_Strength__c</fullName>
    <inlineHelpText>Min_SS</inlineHelpText>
    <label>Minimum Signal Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>