force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Modem_Number__c.field-meta.xml
<CustomField>
    <fullName>FACT_Modem_Number__c</fullName>
    <inlineHelpText>C_ModemNumber</inlineHelpText>
    <label>Modem Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>