force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Modem_Type__c.field-meta.xml
<CustomField>
    <fullName>FACT_Modem_Type__c</fullName>
    <inlineHelpText>C_ModemType</inlineHelpText>
    <label>Modem Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>