force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Network_Address__c.field-meta.xml
<CustomField>
    <fullName>FACT_Network_Address__c</fullName>
    <inlineHelpText>C_NetworkAddress</inlineHelpText>
    <label>Network Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>