force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_OsVersion__c.field-meta.xml
<CustomField>
    <fullName>FACT_OsVersion__c</fullName>
    <inlineHelpText>C_OsVersion</inlineHelpText>
    <label>OS Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>