force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Outlet_City__c.field-meta.xml
<CustomField>
    <fullName>FACT_Outlet_City__c</fullName>
    <inlineHelpText>C_OutletCity</inlineHelpText>
    <label>Outlet City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>