force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Outlet_ID__c.field-meta.xml
<CustomField>
    <fullName>FACT_Outlet_ID__c</fullName>
    <inlineHelpText>OutletID</inlineHelpText>
    <label>Outlet ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>