force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>FACT_Outlet_Name__c</fullName>
    <inlineHelpText>C_OutletName</inlineHelpText>
    <label>Outlet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>