force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Outlet_State_Province__c.field-meta.xml
<CustomField>
    <fullName>FACT_Outlet_State_Province__c</fullName>
    <inlineHelpText>C_OutletStateProvince</inlineHelpText>
    <label>Outlet State Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>