force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Outlet_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>FACT_Outlet_Street_Address__c</fullName>
    <inlineHelpText>C_OutletStreetAddress</inlineHelpText>
    <label>Outlet Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>