force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Outlet_ZIP_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>FACT_Outlet_ZIP_Post_Code__c</fullName>
    <inlineHelpText>C_OutletZIPPostCode</inlineHelpText>
    <label>Outlet ZIP Post Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>