force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_PlatformType__c.field-meta.xml
<CustomField>
    <fullName>FACT_PlatformType__c</fullName>
    <inlineHelpText>C_PlatformType</inlineHelpText>
    <label>Platform Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>