force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>FACT_Registration_Date__c</fullName>
    <inlineHelpText>Registration_Date</inlineHelpText>
    <label>Registration Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>