force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_SAP_ShipTo_ID__c.field-meta.xml
<CustomField>
    <fullName>FACT_SAP_ShipTo_ID__c</fullName>
    <inlineHelpText>C_SAPShipToID</inlineHelpText>
    <label>SAP ShipTo ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>