force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>FACT_Serial_Number__c</fullName>
    <inlineHelpText>Serial_Number</inlineHelpText>
    <label>Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>