force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Serial_Number_ACN__c.field-meta.xml
<CustomField>
    <fullName>FACT_Serial_Number_ACN__c</fullName>
    <formula>FACT_Serial_Number_Valid__c+&#39;-&#39;+FACT_ACN_Corrected__c</formula>
    <label>Serial Number-ACN</label>
    <type>Text</type>
</CustomField>