force-app/main/default/objects/FACT_NMS_and_Air_Watch__c/fields/FACT_Serial_Number_Valid__c.field-meta.xml
<CustomField>
    <fullName>FACT_Serial_Number_Valid__c</fullName>
    <formula>if(OR(BEGINS(FACT_Serial_Number__c,&#39;Z&#39;),BEGINS(FACT_Serial_Number__c,&#39;z&#39;)),
if(LEN(FACT_Serial_Number__c)==10,FACT_Serial_Number__c,&quot;&quot;),&quot;&quot;)</formula>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>